refactor: clean up project structure and configuration
Remove legacy documentation, CI configs, and issue templates from upstream Baritone project. Update build configuration files and package references throughout codebase to reflect maestro rebrand. Simplify gitignore by removing duplicate mapping entry.